--- a/src/core_def/Cargo.toml
+++ b/src/core_def/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "ttcore_def"
 version = "0.2.10"
-authors = ["范辉 <fanhui.x@gmail.com>"]
+
 edition = "2018"
+authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
+description = "Lightweight private cloud solution for SME scenarios."
+license = "MIT OR Apache-2.0"
+keywords = ["openstack", "k8s", "kvm", "cloud"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
