--- a/src/core_def/Cargo.toml
+++ b/src/core_def/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
 description = "Lightweight private cloud solution for SME scenarios."
 license = "MIT OR Apache-2.0"
-keywords = ["openstack", "k8s", "kvm", "cloud"]
+keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
 categories = ["command-line-utilities"]
 
 [dependencies]
