--- a/src/proxy/Cargo.toml
+++ b/src/proxy/Cargo.toml
@@ -18,13 +18,15 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 flate2 = "1.0"
 
-async-std = "1.6.3"
+tide = "0.14"
+async-std = "1.6"
+nix = "0.19"
 
 ttserver_def = { path = "../server_def" }
 myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
 
 [dev-dependencies]
-nix = "0.18"
+attohttpc = "0.16"
 ttserver = { path = "../server" }
 
 [features]
