--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -16,10 +16,10 @@ lazy_static = "1.4"
 nix = "0.18"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-flate2 = "1.0"
 
 threadpool = "1.8"
 
+ttutils = { path = "../utils" }
 ttserver_def = { path = "../server_def" }
 ttrexec = { path = "../rexec", default-features = false, features = [ "client" ] }
 myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
