--- a/src/proxy/Cargo.toml
+++ b/src/proxy/Cargo.toml
@@ -16,12 +16,12 @@ parking_lot = "0.11"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-flate2 = "1.0"
 
 tide = "0.14"
 async-std = "1.6"
 nix = "0.19"
 
+ttutils = { path = "../utils" }
 ttserver_def = { path = "../server_def" }
 myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
 
