--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ttcore"
-version = "0.2.11"
+version = "0.3.0"
 
 edition = "2018"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
@@ -16,8 +16,9 @@ lazy_static = "1.4"
 parking_lot = "0.11"
 ttcore_def = { path = "../core_def" }
 
-serde = { version = "1.0", features = ["derive"] }
+base64 = "0.13"
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
 futures = { version = "0.3.5", features = ["thread-pool"] }
