--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ttcore"
-version = "0.3.1"
+version = "0.3.2"
 
 edition = "2018"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
@@ -21,7 +21,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 
 myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
-futures = { version = "0.3.5", features = ["thread-pool"] }
+futures = { version = "0.3.2"] }
 futures-timer = "3.0.2"
 
 [features]
