--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ttserver"
-version = "0.3.1"
+version = "0.3.2"
 
 edition = "2018"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
@@ -17,7 +17,7 @@ lazy_static = "1.4"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 
-futures = { version = "0.3", features = ["thread-pool"] }
+futures = { version = "0.3.2"] }
 futures-timer = "3.0"
 
 num_cpus = "1.13"
