--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -21,7 +21,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 
 myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
-futures = { version = "0.3.2"] }
+futures = { version = "0.3.2", features = ["thread-pool"] }
 futures-timer = "3.0.2"
 
 [features]
