--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -17,7 +17,7 @@ lazy_static = "1.4"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 
-futures = { version = "0.3.2"] }
+futures = { version = "0.3.2", features = ["thread-pool"] }
 futures-timer = "3.0"
 
 num_cpus = "1.13"
