--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ job_test:
   stage: test
   script:
     - make test
+    - export PATH=$PATH:~/.cargo/bin
     - cargo kcov --all
     - COVERAGE=$(grep -Po '(?<="covered":")\d+(?:\.\d+)?(?=")' target/cov/index.js)
     # Tips: use '^Coverage:\s+(\d+(?:\.\d+)?)' on gitlab to capture the result
