--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tt"
 version = "0.3.2"
 
-edition = "2018"
+edition = "2024"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
 description = "Lightweight private cloud solution for SME scenarios."
 license = "MIT OR Apache-2.0"
@@ -10,16 +10,16 @@ keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-clap = "2.33"
-lazy_static = "1.4"
+clap = "4.5.26"
+lazy_static = "1.5.0"
 
-nix = "0.18"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+nix = { version = "0.29.0", features = ["fs"] }
+serde_json = "1.0.133"
+serde = { version = "1.0.216", features = ["derive"] }
 
-threadpool = "1.8"
+threadpool = "1.8.1"
 
 ttutils = { path = "../utils" }
 ttserver_def = { path = "../server_def" }
 ttrexec = { path = "../rexec", default-features = false, features = [ "client" ] }
-myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
+ruc = "8.1.2"
