--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ttcore"
 version = "0.3.2"
 
-edition = "2018"
+edition = "2024"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
 description = "Lightweight private cloud solution for SME scenarios."
 license = "MIT OR Apache-2.0"
@@ -10,19 +10,19 @@ keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-nix = "0.19"
-libc = "0.2"
-lazy_static = "1.4"
-parking_lot = "0.11"
+nix = { version = "0.29.0", features = ["socket", "uio", "zerocopy", "fs"] }
+libc = "0.2.167"
+lazy_static = "1.5.0"
+parking_lot = "0.12.3"
 ttcore_def = { path = "../core_def" }
 
-base64 = "0.13"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+base64 = "0.22.1"
+serde_json = "1.0.133"
+serde = { version = "1.0.216", features = ["derive"] }
 
-myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
-futures = { version = "0.3.2", features = ["thread-pool"] }
-futures-timer = "3.0.2"
+ruc = "8.1.2"
+futures = { version = "0.3.31", features = ["thread-pool"] }
+futures-timer = "3.0.3"
 
 [features]
 default = [ "nft", "zfs" ]
