--- a/src/proxy/Cargo.toml
+++ b/src/proxy/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ttproxy"
 version = "0.3.2"
 
-edition = "2018"
+edition = "2024"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
 description = "Lightweight private cloud solution for SME scenarios."
 license = "MIT OR Apache-2.0"
@@ -10,23 +10,25 @@ keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-clap = "2.33"
-lazy_static = "1.4"
-parking_lot = "0.11"
+clap = "4.5.26"
+lazy_static = "1.5.0"
+parking_lot = "0.12.3"
 
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.133"
 
-tide = "0.14"
-async-std = "1.6"
-nix = "0.19"
+axum = "0.8.1"
+tide = "0.16.0"
+tokio = { version = "1.42.0", features = ["full"] }
+async-std = "1.13.0"
+nix = { version = "0.29.0", features = ["socket", "uio", "zerocopy", "fs"] }
 
 ttutils = { path = "../utils" }
 ttserver_def = { path = "../server_def" }
-myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
+ruc = "8.1.2"
 
 [dev-dependencies]
-attohttpc = "0.16"
+reqwest = "0.12.9"
 ttserver = { path = "../server" }
 
 [features]
