--- a/src/rexec/Cargo.toml
+++ b/src/rexec/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ttrexec"
 version = "0.3.2"
 
-edition = "2018"
+edition = "2024"
 authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
 description = "Lightweight private cloud solution for SME scenarios."
 license = "MIT OR Apache-2.0"
@@ -10,13 +10,13 @@ keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-nix = "0.18"
-clap = "2.33"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-jemallocator = { optional = true, version = "0.3.2" }
+nix = { version = "0.29.0", features = ["socket", "uio", "zerocopy", "net"] }
+clap = "4.5.26"
+serde_json = "1.0.133"
+serde = { version = "1.0.216", features = ["derive"] }
+jemallocator = { optional = true, version = "0.5.4" }
 
-myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
+ruc = "8.1.2"
 
 [features]
 default = [ "server", "client" ]
